; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_openssl.c_key_from_pem.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_openssl.c_key_from_pem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"failed to load private key\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"failed to setup private key\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @key_from_pem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @key_from_pem(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i64 @strlen(i8* %8)
  %10 = trunc i64 %9 to i32
  %11 = call i32* @BIO_new_mem_buf(i8* %7, i32 %10)
  store i32* %11, i32** %3, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32* @PEM_read_bio_PrivateKey(i32* %12, i32* null, i32* null, i32* null)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  br label %17

17:                                               ; preds = %16, %1
  %18 = phi i1 [ false, %1 ], [ true, %16 ]
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @BIO_free(i32* %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @ptls_openssl_create_key_exchange(i32** %5, i32* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %17
  br label %28

28:                                               ; preds = %27, %17
  %29 = phi i1 [ false, %17 ], [ true, %27 ]
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @EVP_PKEY_free(i32* %32)
  %34 = load i32*, i32** %5, align 8
  ret i32* %34
}

declare dso_local i32* @BIO_new_mem_buf(i8*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @PEM_read_bio_PrivateKey(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @ptls_openssl_create_key_exchange(i32**, i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
